position image, create/position searchbar, create/position search buttons

--- a/index.html
+++ b/index.html
@@ -8,24 +8,37 @@
 	<navbar>
 		<div class="container">
 			<ul id="navbar">
-				<li class="tab">+devon
+				<li class="navtab">+devon
 				</li>
-				<li class="tab">Gmail
+				<li class="navtab">Gmail
 				</li>
-				<li class="tab">Images
+				<li class="navtab">Images
 				</li>
-				<li class="tab">Apps
+				<li class="navtab">Apps
 				</li>
-				<li class="tab">Notifications
+				<li class="navtab">Notifications
 				</li>
-				<li class="tab">Share
+				<li class="navtab">Share
 				</li>
-				<li class="tab">Account
+				<li class="navtab">Account
 				</li>
 			</ul>
 		</div>
 	</navbar>
 
 	<img id="google" src="https://www.google.com/images/srpr/logo11w.png" />
+
+	<form>
+		<input id="searchbar">
+		</input>
+	</form>
+
+	<button id="search">
+		Google Search
+	</button>
+
+	<button id="lucky">
+		I'm Feeling Lucky
+	</button>
 </body>
 </html>		
