add footer, touch header

--- a/index.html
+++ b/index.html
@@ -5,33 +5,40 @@
 	<link type="text/css" rel="stylesheet" href="C:\Users\dbarc_000\code\the_odin_project\google_homepage\style.css">
 </head>
 <body>
-	<navbar>
-		<div class="container">
-			<ul id="navbar">
-				<li class="navtab">+devon
-				</li>
-				<li class="navtab">Gmail
-				</li>
-				<li class="navtab">Images
-				</li>
-				<li class="navtab">Apps
-				</li>
-				<li class="navtab">Notifications
-				</li>
-				<li class="navtab">Share
-				</li>
-				<li class="navtab">Account
-				</li>
-			</ul>
+	<nav>
+		<div id="header">
+			<div id="navbar">
+				<a href="#" class="navtab">+devon
+				</a>
+				<a href="#" class="navtab">Gmail
+				</a>
+				<a href="#" class="navtab">Images
+				</a>
+				<a href="#" class="navtab">
+					<img src="https://www.google.com/intl/en/options/" />
+				</a>
+				<a href="#" class="navtab">
+					
+				</a>
+				<a href="#" id="share">Share
+					
+
+				</a>
+				<a href="#">
+					<img src="https://lh4.googleusercontent.com/-h88mkXLhicU/AAAAAAAAAAI/AAAAAAAAAAA/BvOxc9h8p_s/s32-c/photo.jpg" 
+					id="profile"/>
+				</a>
+			
+			</div>
 		</div>
-	</navbar>
+	</nav>
 
 	<img id="google" src="https://www.google.com/images/srpr/logo11w.png" />
 
 	<form>
 		<input id="searchbar">
 		</input>
-	</form>
+	</form>	
 
 	<button id="search">
 		Google Search
@@ -40,5 +47,19 @@
 	<button id="lucky">
 		I'm Feeling Lucky
 	</button>
+
+	<footer>
+		<div id="footer">
+		<a class="left_foot" href="#">Advertising
+		</a>
+		<a class="left_foot" href="#">Business
+		</a>
+		<a class="left_foot" href="#">About
+		</a>
+		<a class="right_foot" href="#">Settings
+		</a>
+		<a class="right_foot" href="#">Privacy & Terms
+		</a>
+	</div>
 </body>
 </html>		
